# NanoQuantQwen3.5-397B-a17b

./: .gitignore  CUDA-CONTINUATION.md  README.md  RESUME.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-pipeline-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT.md  01-VERIFICATION.md
.planning/phases/02-moe-support/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-scaling-and-evaluation/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-02b-PLAN.md  03-02c-PLAN.md  03-03-PLAN.md  03-CONTEXT.md  03-RESEARCH.md
.planning/research/: NANOQUANT_PAPER_ABSTRACT.md
nanoquant/: __init__.py  admm.py  checkpoint.py  hardware.py  hessian.py  moe.py  quantize.py  reconstruct.py  refine.py
output/Phi-tiny-MoE-instruct/: config.json  quantized_manifest.json
results/: SUMMARY.md
results/OLMoE-1B-7B-0924/: metrics.json
results/Phi-tiny-MoE-instruct/: metrics.json
results/Qwen1.5-MoE-A2.7B/: metrics.json
scripts/: build_summary.py  eval_ppl.py  monitor_quant.py  patch_slimmoe_compat.py  reassemble_from_checkpoints.py  reconstruct_model.py  recover_checkpoint.py  run_eval.py  run_stage1.py
(+11 files in other folders)
