[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nanoquant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "datasets",
    "safetensors",
    "psutil",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["nanoquant*"]
